# fenix-revamp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: BuildTypeSettings.cmake  CompilerWarnings.cmake
fenix-editor/: CMakeLists.txt
fenix-editor/assets-2/fonts/Asap/: README.txt
fenix-editor/assets-2/shaders/: basicLight.vert  test.frag  test.vert
fenix-editor/assets/scenes/: scene_01.fenix  scene_02.fenix
fenix-editor/assets/shaders/: basicLight.frag  test.frag  test.vert  texture_and_color.glsl
fenix-editor/src/: editor_layer.cc  editor_layer.hh  fenix_editor.cc  main.cc
fenix-framework/: CMakeLists.txt
fenix-framework/include/: fenix.hh
fenix-framework/include/fenix/core/: log.hh.ign
fenix-framework/include/fenix/utils/: std_types.hh  timer.hh
fenix-framework/src/: log.cc.ign
fenix-framework/src/fenix/: fxpch.hh
fenix-framework/src/fenix/backend/: linux_window.cc  linux_window.hh  opengl_contex.cc  opengl_context.hh  opengl_debug.cc  opengl_debug.hh  platform_detection.hh
fenix-framework/src/fenix/core/: application.cc  application.hh  base.hh  compiler_macros.hh  entry_point.hh  image.cc  image.hh  layer.cc  layer.hh  layer_stack.cc  layer_stack.hh  log.cc  log.hh  macros.hh  uuid.hh  window.hh
fenix-framework/src/fenix/events/: application_event.hh  event.hh  key_event.hh  mouse_event.hh
fenix-framework/src/fenix/input/: input.cc  input.hh  key_codes.hh  mouse_codes.hh
fenix-framework/src/fenix/renderer/: README.md  bounding_box.cc  bounding_box.hh  buffer.cc  buffer.hh  camera.cc  camera.hh  material.cc  material.hh  mesh.cc  mesh.hh  model.cc  model.hh  render_command.cc  render_command.hh  renderer.cc  renderer.hh  shader.cc  shader.hh  texture_2d.cc  texture_2d.hh
fenix-framework/src/fenix/resource/: importer.cc  resource.hh  resource_manager.cc  resource_manager.hh
fenix-framework/src/fenix/utils/: colors.hh  definitions.hh  profiler.hh  random.cc  random.hh  singleton.hh  std_types.hh  timer.hh
tests/: miscellanious.cc
tools/: README.md
